--- a/.github/workflows/steinberg.yml
+++ b/.github/workflows/steinberg.yml
@@ -12,7 +12,7 @@ on:
         required: false
         type: string
       dir_source:
-        default: ./vst3sdk
+        default: ./sdk
         required: false
         type: string
       release_id:
