--- a/.github/workflows/dpf.yml
+++ b/.github/workflows/dpf.yml
@@ -65,6 +65,8 @@ jobs:
 
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          submodules: true
 
       - name: Build plugins
         run: |
