--- a/.github/workflows/projucer.yml
+++ b/.github/workflows/projucer.yml
@@ -71,6 +71,8 @@ jobs:
 
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          submodules: true
 
       - name: Build (Projucer)
         run: |
