--- a/.github/workflows/sfz.yml
+++ b/.github/workflows/sfz.yml
@@ -29,6 +29,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          submodules: true
 
       - name: Upload metadata
         uses: actions/upload-release-asset@v1
