--- a/.github/workflows/dplug.yml
+++ b/.github/workflows/dplug.yml
@@ -41,15 +41,18 @@ jobs:
           - os: ubuntu-latest
             name: linux
             generator: Unix Makefiles
-            path: ${{ inputs.dir_build }}/VST3/${{ inputs.type }}
+            path: ${{ inputs.dir_source }}/examples/clipit/builds/Linux-64b-VST3
+            file: Witty Audio CLIP It.vst3
           - os: macos-latest
             name: mac
             generator: Xcode
-            path: ${{ inputs.dir_build }}/VST3/${{ inputs.type }}
+            path: ${{ inputs.dir_source }}/examples/clipit/builds/macOS-64b-VST3
+            file: Witty Audio CLIP It.vst3
           - os: windows-latest
             name: win
             generator: Visual Studio 16 2019
-            path: ${{ inputs.dir_build }}/VST3/${{ inputs.type }}
+            path: ${{ inputs.dir_source }}/examples/clipit/builds/Windows-64b-VST3
+            file: Witty Audio CLIP It-64.vst3
     steps:
       - name: Install D compiler
         uses: dlang-community/setup-dlang@v1
@@ -69,6 +72,8 @@ jobs:
           cd ../../../
           cd ./dplugsdk/examples/clipit
           ../../tools/dplug-build/dplug-build -c VST3 -a x86_64
+          cd ../../../
+          mv "${{ matrix.path }}/${{ matrix.file }}" "${{ matrix.path }}/witty-audio-clip-it.vst3"
 
       - name: List files
         run: ls ${{ matrix.path }}
