--- a/.github/workflows/juce.yml
+++ b/.github/workflows/juce.yml
@@ -22,7 +22,7 @@ on:
         required: true
         type: string
       target:
-        default: all
+        default: AudioPluginExample_All
         required: false
         type: string
       type:
