--- a/.github/workflows/juce.yml
+++ b/.github/workflows/juce.yml
@@ -80,7 +80,7 @@ jobs:
           cmake --build "${{ inputs.dir_build }}" --config "${{ inputs.type }}" --target "${{ inputs.target }}"
 
       - name: List files
-        run: ls ${{ matrix.path }}
+        run: ls "${{ matrix.path }}"
 
       - name: Metadata
         run: |
