--- a/.github/workflows/steinberg.yml
+++ b/.github/workflows/steinberg.yml
@@ -11,8 +11,12 @@ on:
         default: ./build
         required: false
         type: string
-      dir_source:
+      dir_sdk:
         default: ./sdk
+        required: false
+        type: string
+      dir_source:
+        default: ./sdk/public.sdk/samples/vst/adelay
         required: false
         type: string
       release_id:
