--- a/.github/workflows/juce.yml
+++ b/.github/workflows/juce.yml
@@ -16,7 +16,7 @@ on:
         required: false
         type: string
       dir_source:
-        default: ./sdk/examples/Plugins
+        default: ./sdk
         required: false
         type: string
       release_id:
