--- a/.github/workflows/steinberg.yml
+++ b/.github/workflows/steinberg.yml
@@ -16,7 +16,7 @@ on:
         required: false
         type: string
       dir_source:
-        default: ./sdk/public.sdk/samples/vst/adelay
+        default: ./sdk
         required: false
         type: string
       release_id:
