Steinberg change default target

--- a/.github/workflows/steinberg.yml
+++ b/.github/workflows/steinberg.yml
@@ -26,7 +26,7 @@ on:
         required: true
         type: string
       target:
-        default: all
+        default: adelay
         required: false
         type: string
       type:
