--- a/.github/workflows/dpf.yml
+++ b/.github/workflows/dpf.yml
@@ -74,6 +74,7 @@ jobs:
 
       - name: Build plugins
         run: |
+          ls ${{ inputs.dir_sdk }}/dgl/src
           cmake \
             -G "${{ matrix.generator }}" \
             -DCMAKE_BUILD_TYPE="${{ inputs.type }}" \
