Checkout submodules recursively

--- a/.github/workflows/iplug.yml
+++ b/.github/workflows/iplug.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          submodules: true
+          submodules: recursive
 
       - name: Setup
         shell: bash
