--- a/.github/workflows/sfz.yml
+++ b/.github/workflows/sfz.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          submodules: true
+          submodules: recursive
 
       - name: Upload metadata
         uses: actions/upload-release-asset@v1
