--- a/.github/workflows/dplug.yml
+++ b/.github/workflows/dplug.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          submodules: true
+          submodules: recursive
 
       - name: Build plugins
         run: |
