--- a/.github/workflows/projucer.yml
+++ b/.github/workflows/projucer.yml
@@ -83,7 +83,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          submodules: true
+          submodules: recursive
 
       - name: Build (Projucer)
         run: |
