--- a/.github/workflows/sfz.yml
+++ b/.github/workflows/sfz.yml
@@ -21,7 +21,7 @@ on:
         default: flac
         required: false
         type: string
-      audio_ext_lossy:
+      audio_ext_compact:
         default: ogg
         required: false
         type: string
@@ -90,24 +90,24 @@ jobs:
       - name: Install ffmpeg
         uses: FedericoCarboni/setup-ffmpeg@v1
 
-      - name: Create lossy version
+      - name: Create compact version
         run: |
           IFS=$'\n'
-          for file in $(find . -name '*.${{ inputs.audio_ext }}'); do ffmpeg -i "$file" -b:a ${{ inputs.audio_bitrate }} "${file%.*}.${{ inputs.audio_ext_lossy }}"; done
-          find . -name '*.sfz' -exec sed -i -e 's/${{ inputs.audio_ext }}/${{ inputs.audio_ext_lossy }}/g' {} \;
+          for file in $(find . -name '*.${{ inputs.audio_ext }}'); do ffmpeg -i "$file" -b:a ${{ inputs.audio_bitrate }} "${file%.*}.${{ inputs.audio_ext_compact }}"; done
+          find . -name '*.sfz' -exec sed -i -e 's/${{ inputs.audio_ext }}/${{ inputs.audio_ext_compact }}/g' {} \;
           find . -name '*.${{ inputs.audio_ext }}' -type f -delete
 
-      - name: Compress lossy version
+      - name: Compress compact version
         run: |
           rm ${{ github.event.repository.name }}.zip
-          zip -r ./${{ github.event.repository.name }}-lossy.zip *
+          zip -r ./${{ github.event.repository.name }}-compact.zip *
 
-      - name: Upload lossy version
+      - name: Upload compact version
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ inputs.release_url }}
-          asset_path: ./${{ github.event.repository.name }}-lossy.zip
-          asset_name: ${{ github.event.repository.name }}-lossy.zip
+          asset_path: ./${{ github.event.repository.name }}-compact.zip
+          asset_name: ${{ github.event.repository.name }}-compact.zip
           asset_content_type: application/zip
