SFZ template replace sfz/txt files

--- a/.github/workflows/sfz.yml
+++ b/.github/workflows/sfz.yml
@@ -94,8 +94,8 @@ jobs:
         run: |
           IFS=$'\n'
           for file in $(find . -name '*.${{ inputs.audio_ext }}'); do ffmpeg -i "$file" -b:a ${{ inputs.audio_bitrate }} "${file%.*}.${{ inputs.audio_ext_compact }}"; done
-          find . -name '*.sfz' -exec sed -i -e 's/${{ inputs.audio_ext }}/${{ inputs.audio_ext_compact }}/g' {} \;
-          find . -name '*.${{ inputs.audio_ext }}' -type f -delete
+          find . -type f -name '*.sfz' -o -name '*.txt' -exec sed -i -e 's/${{ inputs.audio_ext }}/${{ inputs.audio_ext_compact }}/g' {} \;
+          find . -type f -name '*.${{ inputs.audio_ext }}' -type f -delete
 
       - name: Compress compact version
         run: |
