--- a/.github/workflows/clap.yml
+++ b/.github/workflows/clap.yml
@@ -65,7 +65,7 @@ jobs:
 
       - name: Install Windows dependencies
         if: matrix.os == 'windows-latest'
-        run: choco install cmake zip
+        run: choco install cmake zip ninja
 
       - name: Checkout code
         uses: actions/checkout@v2
