Update clap cmake command

--- a/.github/workflows/clap.yml
+++ b/.github/workflows/clap.yml
@@ -57,41 +57,7 @@ jobs:
     steps:
       - name: Install Linux dependencies
         if: matrix.os == 'ubuntu-latest'
-        run: |
-          sudo apt update && sudo apt upgrade && sudo apt install
-          build-essential gperf ninja-build cmake
-          libgl1-mesa-dev
-          libfontconfig1-dev
-          libfreetype6-dev
-          libx11-dev
-          libx11-xcb-dev
-          libxcb-damage0-dev
-          libxcb-dpms0-dev
-          libxcb-glx0-dev
-          libxcb-icccm4-dev
-          libxcb-image0-dev
-          libxcb-keysyms1-dev
-          libxcb-present-dev
-          libxcb-randr0-dev
-          libxcb-record0-dev
-          libxcb-render-util0-dev
-          libxcb-render0-dev
-          libxcb-res0-dev
-          libxcb-shape0-dev
-          libxcb-shm0-dev
-          libxcb-sync-dev
-          libxcb-util-dev
-          libxcb-xfixes0-dev
-          libxcb-xinerama0-dev
-          libxcb-xkb-dev
-          libxcb1-dev
-          libxext-dev
-          libxfixes-dev
-          libxi-dev
-          libxkbcommon-dev
-          libxkbcommon-x11-dev
-          libxrender-dev
-          libatspi2.0-dev
+        run: sudo apt-get update && sudo apt-get install cmake ninja-build
 
       - name: Install macOS dependencies
         if: matrix.os == 'macos-latest'
