--- a/.github/workflows/clap.yml
+++ b/.github/workflows/clap.yml
@@ -82,6 +82,9 @@ jobs:
             -B "${{ inputs.dir_build }}"
           cmake --build "${{ inputs.dir_build }}" --config "${{ inputs.type }}" --target "${{ inputs.target }}"
 
+      - name: List errors
+        run: cat "${{ inputs.dir_build }}/CMakeFiles/CMakeError.log"
+
       - name: List files
         run: ls "${{ matrix.path }}"
 
