--- a/.github/workflows/dpf.yml
+++ b/.github/workflows/dpf.yml
@@ -82,7 +82,7 @@ jobs:
           cmake --build "${{ inputs.dir_build }}" --config "${{ inputs.type }}"
 
       - name: List errors
-        run: cat "${{ inputs.dir_build }}/CMakeFiles/CMakeError.log"
+        run: cat "${{ inputs.dir_build }}/CMakeFiles/CMakeError.log" || true
 
       - name: List files
         run: ls "${{ matrix.path }}"
