Remove cmake and zip dependencies already on Github runners

--- a/.github/workflows/clap.yml
+++ b/.github/workflows/clap.yml
@@ -57,15 +57,15 @@ jobs:
     steps:
       - name: Install Linux dependencies
         if: matrix.os == 'ubuntu-latest'
-        run: sudo apt-get update && sudo apt-get install cmake ninja-build
+        run: sudo apt-get update && sudo apt-get install ninja-build
 
       - name: Install macOS dependencies
         if: matrix.os == 'macos-latest'
-        run: brew install automake autoconf ninja cmake
+        run: brew install ninja
 
       - name: Install Windows dependencies
         if: matrix.os == 'windows-latest'
-        run: choco install cmake zip ninja
+        run: choco install ninja
 
       - name: Checkout code
         uses: actions/checkout@v2
