--- a/.github/workflows/projucer.yml
+++ b/.github/workflows/projucer.yml
@@ -72,9 +72,9 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: sudo apt-get update && sudo apt-get install libasound2-dev libcurl4-openssl-dev libx11-dev libxinerama-dev libxext-dev libfreetype6-dev libwebkit2gtk-4.0-dev libglu1-mesa-dev libjack-jackd2-dev
 
-      - name: Install macOS dependencies
-        if: matrix.os == 'macos-latest'
-        run: brew install cmake
+      # - name: Install macOS dependencies
+      #   if: matrix.os == 'macos-latest'
+      #   run: brew install zip
 
       - name: Install Windows dependencies
         if: matrix.os == 'windows-latest'
@@ -88,7 +88,7 @@ jobs:
       - name: Build (Projucer)
         run: |
           curl -L https://github.com/juce-framework/JUCE/releases/download/6.0.8/juce-6.0.8-${{ matrix.projucer_type }}.zip --output jucesdk.zip
-          unzip jucesdk.zip
+          7z x jucesdk.zip
           ${{ matrix.projucer_bin }} --set-global-search-path ${{ matrix.projucer_type }} defaultJuceModulePath ./JUCE/modules
           ${{ matrix.projucer_bin }} --resave "${{ inputs.dir_source }}/${{ inputs.file_name }}.jucer"
 
