--- a/.github/workflows/steinberg.yml
+++ b/.github/workflows/steinberg.yml
@@ -57,15 +57,15 @@ jobs:
     steps:
       - name: Install Linux dependencies
         if: matrix.os == 'ubuntu-latest'
-        run: sudo apt-get update && sudo apt-get install cmake gcc "libstdc++6" libx11-xcb-dev libxcb-util-dev libxcb-cursor-dev libxcb-xkb-dev libxkbcommon-dev libxkbcommon-x11-dev libfontconfig1-dev libcairo2-dev libgtkmm-3.0-dev libsqlite3-dev libxcb-keysyms1-dev libasound2-dev
+        run: sudo apt-get update && sudo apt-get install gcc "libstdc++6" libx11-xcb-dev libxcb-util-dev libxcb-cursor-dev libxcb-xkb-dev libxkbcommon-dev libxkbcommon-x11-dev libfontconfig1-dev libcairo2-dev libgtkmm-3.0-dev libsqlite3-dev libxcb-keysyms1-dev libasound2-dev
 
-      - name: Install macOS dependencies
-        if: matrix.os == 'macos-latest'
-        run: brew install cmake
+      # - name: Install macOS dependencies
+      #   if: matrix.os == 'macos-latest'
+      #   run: brew install zip
 
-      - name: Install Windows dependencies
-        if: matrix.os == 'windows-latest'
-        run: choco install cmake zip
+      # - name: Install Windows dependencies
+      #   if: matrix.os == 'windows-latest'
+      #   run: choco install zip
 
       - name: Checkout code
         uses: actions/checkout@v2
@@ -140,7 +140,7 @@ jobs:
         if: ${{ github.repository_owner == 'studiorack' }}
         run: |
           cd "${{ inputs.dir_build }}/bin/${{ inputs.type }}"
-          zip -r ../validator-${{ matrix.name }}.zip *
+          7z a ../validator-${{ matrix.name }}.zip -r
 
       - name: Upload validator
         if: ${{ github.repository_owner == 'studiorack' }}
