--- a/.github/workflows/clap.yml
+++ b/.github/workflows/clap.yml
@@ -40,7 +40,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-2019]
         include:
           - os: ubuntu-latest
             name: linux
@@ -50,7 +50,7 @@ jobs:
             name: mac
             generator: Ninja Multi-Config
             path: ${{ inputs.dir_build }}/${{ inputs.type }}
-          - os: windows-latest
+          - os: windows-2019
             name: win
             generator: Ninja Multi-Config
             path: ${{ inputs.dir_build }}/${{ inputs.type }}
@@ -64,7 +64,7 @@ jobs:
         run: brew install ninja
 
       - name: Install Windows dependencies
-        if: matrix.os == 'windows-latest'
+        if: matrix.os == 'windows-2019'
         run: choco install ninja
 
       - name: Checkout code
