--- a/.github/workflows/dplug.yml
+++ b/.github/workflows/dplug.yml
@@ -40,7 +40,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-2019]
         include:
           - os: ubuntu-latest
             name: linux
@@ -52,7 +52,7 @@ jobs:
             generator: Xcode
             path: ${{ inputs.dir_source }}/builds/macOS-64b-VST3
             file: Witty Audio CLIP It.vst3
-          - os: windows-latest
+          - os: windows-2019
             name: win
             generator: Visual Studio 16 2019
             path: ${{ inputs.dir_source }}/builds/Windows-64b-VST3
